Sat Sep 20 23:58:21 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_chunk): Deprecate the state management.
	  (enum_slice_before): Ditto.

Sat Sep 20 15:39:11 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_slice_when): New method: Enumerable#slice_when.
	  (slicewhen_i): New function.
	  (slicewhen_ii): New function.

	* enumerator.c (InitVM_Enumerator): New method:
	  Enumerator::Lazy#slice_when.

	  [ruby-core:62499] [Feature #9826]

Sat Sep 20 11:55:19 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: added new configurations for osx on travis ci.
	  [fix GH-723]
	* test/ruby/test_object.rb: tweaked to memory leak limit for osx build.

Sat Sep 20 10:48:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assoc): allow quoted ID as a key of a hash literal.
	  [ruby-core:34453] [Feature #4276]

Sat Sep 20 10:23:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments): store local variable IDs in
	  temporary list as Symbols.  previously these are stored as
	  Fixnums to prevent from GC, but IDs of dynamic symbols can
	  exceed Fixnum range and cause RangeError at inverting from
	  Fixnum.  [ruby-dev:48564] [Bug #10266]

Sat Sep 20 10:02:51 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/lib/openssl/x509.rb (OpenSSL::X509::Name#pretty_print):
	  New method.
	  (OpenSSL::X509::Certificate#pretty_print): Ditto.

	* ext/openssl/lib/openssl/bn.rb (OpenSSL::BN#pretty_print): Ditto.

Sat Sep 20 07:55:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): fix super from eval with
	  scope.  set klass in the current control frame to the class of
	  the receiver in the context to be evaluated, this class/module
	  must match the actual receiver to call super.
	  [ruby-core:65122] [Bug #10263]

Fri Sep 19 20:06:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (rb_str_dynamic_intern): check if the stem ID of
	  attrset ID is already registered as a static ID.